# tiadso

./: config.h  loss_functions.c  loss_functions.h  main.c  meson.build
commons/: log.c  log.h  sol.c  sol.h  typedefs.h  types.h
optimizers/: bruteforce.c  bruteforce.h  common_helpers.c  optimizer-common-defs.h
